--- a/index.html
+++ b/index.html
@@ -5,18 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Score counter</title>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/all.min.css">
+    <link rel="stylesheet" href="css/fontawesome.min.css">
 </head>
 <body>
-    <div class="container">
-        <div class="player" id="player1">
-            <p contenteditable="true">Player 1</p>
-            <h1 id="count1">0</h1>
-        </div>
+    <div class="main">
+            <p class="timer">
+                <span><i class="fas fa-play fa-lg" aria-hidden="true" id="start"></i></span>
+                 <span id="timer">00:00:00</span>
+                <span><i class="fas fa-arrows-rotate fa-lg" aria-hidden="true" id="reset"></i></span>
+            </p>
 
-        <div class="player" id="player2">
-            <p contenteditable="true">Player 2</p>
-            <h1 id="count2">0</h1>
+        <div class="container">
+            <div class="player" id="player1">
+                <p contenteditable="true">Player 1</p>
+                <h1 id="count1">0</h1>
+            </div>
+
+            <div class="player" id="player2">
+                <p contenteditable="true">Player 2</p>
+                <h1 id="count2">0</h1>
+            </div>
         </div>
     </div>
 
