add a reset all function

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 </head>
 <body>
     <div class="main">
-            <p class="timer">
+            <div class="timer">
                 <span><i class="fas fa-play fa-lg" aria-hidden="true" id="start"></i></span>
                  <span id="timer">00:00:00</span>
                 <span><i class="fas fa-arrows-rotate fa-lg" aria-hidden="true" id="reset"></i></span>
-            </p>
+            </div>
 
         <div class="container">
             <div class="player" id="player1">
@@ -27,6 +27,10 @@
                 <p contenteditable="true">Player 2</p>
                 <h1 id="count2">0</h1>
             </div>
+        </div>
+
+        <div class="reset-all">
+            <span><i class="fas fa-arrows-rotate fa-lg" aria-hidden="true" id="reset-all"></i></span>
         </div>
     </div>
 
