update the resetALL function to resetAllCounts function which now reset the whole screen

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
 
         <div class="reset-all">
-            <span><i class="fas fa-arrows-rotate fa-lg" aria-hidden="true" id="reset-all"></i></span>
+            <span><i class="fas fa-arrows-rotate fa-lg" aria-hidden="true" id="reset-all" onclick="resetAllCounts()"></i></span>
         </div>
     </div>
 
