Trying to add undo feature into the score board

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
         <div class="reset-all">
             <span><i class="fas fa-arrows-rotate fa-lg" aria-hidden="true" id="reset-all" onclick="resetAllCounts()"></i></span>
+            <span><i class="fas fa-arrow-rotate-left fa-lg" aria-hidden="true" onclick="undoCounts()"></i></span>
         </div>
     </div>
 
