--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="timer">
                 <span><i class="fas fa-play fa-lg" aria-hidden="true" id="start"></i></span>
                  <span id="timer">00:00:00</span>
-                <span><i class="fas fa-arrows-rotate fa-lg" aria-hidden="true" id="reset"></i></span>
+                <span><i class="fas fa-arrows-rotate fa-lg" aria-hidden="true" id="reset"></i></span>//
             </div>
 
         <div class="container">
